change email address on 404 page

--- a/404.html
+++ b/404.html
@@ -36,7 +36,7 @@
     </div>
     <div class="error__action">
       <a class="btn btn--outline" href="/" target="_blank">Go To Homepage</a>
-      <a class="btn btn--outline" href="mailto:support@jekyllrb.com" target="_blank">Report A Problem</a>
+      <a class="btn btn--outline" href="mailto:rubyconfth@gmail.com" target="_blank">Report A Problem</a>
     </div>
   </div>
 </body>
