Make the 404 page more consistent in terms of styling by using the same font and color

--- a/404.html
+++ b/404.html
@@ -14,7 +14,7 @@
   <link rel="icon" type="image/png" sizes="16x16" href="/public/images/favicon/favicon-16x16.png"/>
   <link rel="icon" type="image/x-icon" href="/public/images/favicon/favicon.ico">
 
-  <link rel="stylesheet" media="screen" href="https://fonts.googleapis.com/css?family=Open+Sans" />
+  <link rel="stylesheet" media="screen" href="https://fonts.googleapis.com/css?family=Work+Sans:400,700" />
 
   <link rel="stylesheet" href="/public/stylesheets/error.css" />
 </head>
