Create separate layout for error pages

--- a/src/404.html
+++ b/src/404.html
@@ -1,14 +1,15 @@
 ---
-permalink: /404.html
 layout: error
+page_class: home
+title: "Not Found"
+permalink: /404.html
 ---
 
 <div class="error">
   <header class="error__header">
-    <h1 class="error__head-line">404</h1>
+    <h1 class="error__headline">404</h1>
     <p class="error__sub-header">
-      Oops, the page you're <br>
-      looking for does not exist.
+      Oops, the page you're <br>looking for does not exist.
     </p>
   </header>
   <hr>
@@ -19,7 +20,7 @@ layout: error
     </p>
   </div>
   <div class="error__action">
-    <a class="btn btn--outline" href="/" target="_blank">Go To Homepage</a>
+    <a class="btn btn--outline" href="/">Go To Homepage</a>
     <a class="btn btn--outline" href="mailto:rubyconfth@gmail.com" target="_blank">Report A Problem</a>
   </div>
 </div>
