link past confs on 404 page

--- a/src/404.html
+++ b/src/404.html
@@ -15,6 +15,14 @@ permalink: /404.html
   <hr>
   <div class="error__context">
     <p>
+      Looking for something from our previous conferences?<br/>
+      Check our archived homepage for RubyConfTH 2022 or RubyConfTH 2019.
+    </p>
+    <div class="error__action">
+      <a class="btn btn--outline" href="/past/2022/">2022 site</a>
+      <a class="btn btn--outline" href="/past/2019/">2019 site</a>
+    </div>
+    <p>
       You may want to head back to the homepage.<br />
       If you think something is broken, report a problem.
     </p>
