--- a/public/index.html
+++ b/public/index.html
@@ -12,13 +12,13 @@
 <body>
     <header>
         <nav>
-            <!-- Navigation content will go here -->
+            <img class="logo" src="./images/shared/logo/logo-text-icon.svg" alt="RubyConf Thailand 2026">
         </nav>
     </header>
 
     <main>
         <section>
-            Coming soon
+            We're working on something magical!
         </section>
     </main>
 
