--- a/public/index.html
+++ b/public/index.html
@@ -9,16 +9,8 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;600;700;800&family=Noto+Emoji:wght@700&display=swap"
         rel="stylesheet">
-    <style>
-        body {
-            font-family: 'Work Sans', sans-serif;
-        }
+    <link href="./styles.css" rel="stylesheet">
 
-        .emoji {
-            font-family: 'Noto Emoji', sans-serif;
-            font-weight: 700;
-        }
-    </style>
 </head>
 
 <body class="bg-slate-900 text-white text-lg">
