--- a/public/index.html
+++ b/public/index.html
@@ -42,7 +42,7 @@
                             class="w-full h-full object-cover object-center opacity-50 mix-blend-multiply" />
                     </div>
                     <div class="relative z-10">
-                        <h2 class="text-2xl md:text-4xl font-bold">JAN 5+6 2026</h2>
+                        <h2 class="text-2xl md:text-4xl font-bold">JAN 31-FEB 1, 2026</h2>
                         <h1 class="text-4xl md:text-7xl font-extrabold mt-6">
                             RUBYCONF<br>
                             THAILAND<br>
