update the footer

--- a/public/index.html
+++ b/public/index.html
@@ -168,13 +168,15 @@
                 </div>
 
                 <article class="bg-slate-800 border-slate-700 border rounded-xl p-10 text-center shadow-lg">
-                    <p class="text-black mb-6">conference of smiles</p>
                     <ul class="flex justify-center gap-8">
                         <li class="text-5xl hover:scale-110 transition-transform">☺️</li>
                         <li class="text-5xl hover:scale-110 transition-transform">☺️</li>
                         <li class="text-5xl hover:scale-110 transition-transform">☺️</li>
                         <li class="text-5xl hover:scale-110 transition-transform">☺️</li>
                     </ul>
+                    <p class="text-white mt-6">the conference of smiles | made with love by <a class="text-red-400"
+                            href="https://bangkokrb.org/">bangkok.rb</a></p>
+
                 </article>
             </section>
         </main>
