--- a/public/index.html
+++ b/public/index.html
@@ -174,8 +174,13 @@
                         <li class="text-5xl hover:scale-110 transition-transform">☺️</li>
                         <li class="text-5xl hover:scale-110 transition-transform">☺️</li>
                     </ul>
-                    <p class="text-white mt-6">the conference of smiles | made with love by <a class="text-red-400"
+                    <p class="text-white mt-6">The conference of smiles | Made with love by <a class="text-red-400"
                             href="https://bangkokrb.org/">bangkok.rb</a></p>
+                    <p class="text-white mt-6">Past events:
+                        <a class="text-red-400" href="./past/2019/">2019</a>,
+                        <a class="text-red-400" href="./past/2022/">2022</a>,
+                        <a class="text-red-400" href="./past/2023/">2023</a>
+                    </p>
 
                 </article>
             </section>
