--- a/public/index.html
+++ b/public/index.html
@@ -168,73 +168,80 @@
                         </dl>
                     </article>
                 </div>
-                
 
-<!-- insert new section here                 -->
 
-<article class="bg-slate-800 border-slate-700 border rounded-xl p-10 shadow-lg">
-    <div class="text-center">
-        <h3 class="text-2xl font-bold mb-2">Interested in sponsoring the conference?</h3>
-        <p class="text-slate-400 mb-6">Promote your company to the world's top Ruby developers</p>
-        <a class="inline-block bg-red-700 text-white px-8 py-3 rounded-xl font-bold hover:bg-red-800 transition-all shadow-lg hover:shadow-xl border border-red-200/40 hover:border-red-200/60"
-            href="https://rubyconfth.com/sponsors2023" target="_blank">View sponsorship deck</a>
-    </div>
-    <div class="container mx-auto text-center mt-8">
-        <h3 class="text-2xl font-bold mb-2">Join our mailing list</h3>
-        <p class="text-slate-400 mb-6">Sign up to receive updates about the event</p>
-        <form action="https://rubyconfth.us20.list-manage.com/subscribe/post?u=fd4a02525718b1d58ebaed6a0&id=4af9421776"
-            method="post" class="form-mailing-list flex justify-center items-center gap-4" target="_blank">
-            <div class="form__group w-1/3">
-                <input type="hidden" name="tags" value="3502539">
-                <input type="email" name="EMAIL" placeholder="Enter your email address"
-                    class="form__control form__control--lg w-full bg-white text-slate-900 border-slate-600 placeholder-slate-500 focus:border-red-700 focus:ring-red-700 focus:ring-1 rounded-full h-12 text-center"
-                    required />
-                <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text"
-                        name="b_fd4a02525718b1d58ebaed6a0_4af9421776" tabindex="-1" value=""></div>
-            </div>
-            <button type="submit"
+                <!-- insert new section here                 -->
+
+                <article class="bg-slate-800 border-slate-700 border rounded-xl p-10 shadow-lg">
+                    <div class="text-center">
+                        <h3 class="text-2xl font-bold mb-2">Interested in sponsoring the conference?</h3>
+                        <p class="text-slate-400 mb-6">Promote your company to the world's top Ruby developers</p>
+                        <a class="inline-block bg-red-700 text-white px-8 py-3 rounded-xl font-bold hover:bg-red-800 transition-all shadow-lg hover:shadow-xl border border-red-200/40 hover:border-red-200/60"
+                            href="https://rubyconfth.com/sponsors2023" target="_blank">View sponsorship deck</a>
+                    </div>
+                    <div class="container mx-auto text-center mt-8">
+                        <h3 class="text-2xl font-bold mb-2">Join our mailing list</h3>
+                        <p class="text-slate-400 mb-6">Sign up to receive updates about the event</p>
+                        <form
+                            action="https://rubyconfth.us20.list-manage.com/subscribe/post?u=fd4a02525718b1d58ebaed6a0&id=4af9421776"
+                            method="post" class="form-mailing-list flex justify-center items-center gap-4"
+                            target="_blank">
+                            <div class="form__group w-1/3">
+                                <input type="hidden" name="tags" value="3502539">
+                                <input type="email" name="EMAIL" placeholder="Enter your email address"
+                                    class="form__control form__control--lg w-full bg-white text-slate-900 border-slate-600 placeholder-slate-500 focus:border-red-700 focus:ring-red-700 focus:ring-1 rounded-full h-12 text-center"
+                                    required />
+                                <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text"
+                                        name="b_fd4a02525718b1d58ebaed6a0_4af9421776" tabindex="-1" value=""></div>
+                            </div>
+                            <button type="submit"
                                 class="inline-block bg-red-700 text-white px-8 py-3 rounded-xl font-bold hover:bg-red-800 transition-all shadow-lg hover:shadow-xl border border-red-200/40 hover:border-red-200/60">I
                                 Love Ruby</button>
-        </form>
-    </div>
-</article>
+                        </form>
+                    </div>
+                </article>
 
 
-<!-- until here -->
+                <!-- until here -->
 
 
-<article class="bg-slate-800 border-slate-700 border rounded-xl p-10 shadow-lg">
-    <div class="text-center">
-        <h3 class="text-2xl font-bold mb-6">Follow Us</h3>
-        <ul class="flex justify-center gap-6">
-            <li>
-                <a href="https://twitter.com/rubyconfth" target="_blank" class="text-red-400 hover:text-red-500 transition-colors">
-                    <i class="fab fa-twitter text-4xl"></i>
-                </a>
-            </li>
-            <li>
-                <a href="https://facebook.com/rubyconfth" target="_blank" class="text-red-400 hover:text-red-500 transition-colors">
-                    <i class="fab fa-facebook-f text-4xl"></i>
-                </a>
-            </li>
-            <li>
-                <a href="https://instagram.com/rubyconfth" target="_blank" class="text-red-400 hover:text-red-500 transition-colors">
-                    <i class="fab fa-instagram text-4xl"></i>
-                </a>
-            </li>
-            <li>
-                <a href="https://youtube.com/rubyconfth" target="_blank" class="text-red-400 hover:text-red-500 transition-colors">
-                    <i class="fab fa-youtube text-4xl"></i>
-                </a>
-            </li>
-            <li>
-                <a href="https://github.com/rubyconfth" target="_blank" class="text-red-400 hover:text-red-500 transition-colors">
-                    <i class="fab fa-github text-4xl"></i>
-                </a>
-            </li>
-        </ul>
-    </div>
-</article>
+                <article class="bg-slate-800 border-slate-700 border rounded-xl p-10 shadow-lg">
+                    <div class="text-center">
+                        <h3 class="text-2xl font-bold mb-6">Follow Us</h3>
+                        <ul class="flex justify-center gap-6">
+                            <li>
+                                <a href="https://twitter.com/rubyconfth" target="_blank"
+                                    class="text-red-400 hover:text-red-500 transition-colors">
+                                    <i class="fab fa-twitter text-4xl"></i>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="https://facebook.com/rubyconfth" target="_blank"
+                                    class="text-red-400 hover:text-red-500 transition-colors">
+                                    <i class="fab fa-facebook-f text-4xl"></i>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="https://instagram.com/rubyconfth" target="_blank"
+                                    class="text-red-400 hover:text-red-500 transition-colors">
+                                    <i class="fab fa-instagram text-4xl"></i>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="https://youtube.com/rubyconfth" target="_blank"
+                                    class="text-red-400 hover:text-red-500 transition-colors">
+                                    <i class="fab fa-youtube text-4xl"></i>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="https://github.com/rubyconfth" target="_blank"
+                                    class="text-red-400 hover:text-red-500 transition-colors">
+                                    <i class="fab fa-github text-4xl"></i>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </article>
 
 
                 <article class="bg-slate-800 border-slate-700 border rounded-xl p-10 text-center shadow-lg">
