split mailing list and sponsonship into two sections, add link to mailing list

--- a/public/index.html
+++ b/public/index.html
@@ -29,10 +29,10 @@
                         <li><a href="#" class="hover:text-red-600 transition-colors">Sponsors</a></li>
                     </ul>
                     -->
-                    <!-- <a href="#"
+                    <a href="#mailinglist"
                         class="bg-red-700 text-white px-8 py-3 rounded-xl font-bold hover:bg-red-800 transition-all shadow-lg hover:shadow-xl border border-red-200/40 hover:border-red-200/60">
-                        Buy Tickets
-                    </a> -->
+                        I'm interested
+                    </a>
                 </div>
             </nav>
         </header>
@@ -169,9 +169,7 @@
                     </article>
                 </div>
 
-
-                <!-- insert new section here                 -->
-
+                <!-- Sponsorship Section -->
                 <article class="bg-slate-800 border-slate-700 border rounded-xl p-10 shadow-lg">
                     <div class="text-center">
                         <h3 class="text-2xl font-bold mb-2">Interested in sponsoring the conference?</h3>
@@ -179,7 +177,11 @@
                         <a class="inline-block bg-red-700 text-white px-8 py-3 rounded-xl font-bold hover:bg-red-800 transition-all shadow-lg hover:shadow-xl border border-red-200/40 hover:border-red-200/60"
                             href="https://rubyconfth.com/sponsors2023" target="_blank">View sponsorship deck</a>
                     </div>
-                    <div class="container mx-auto text-center mt-8">
+                </article>
+
+                <!-- Mailing List Section -->
+                <article id="mailinglist" class="bg-slate-800 border-slate-700 border rounded-xl p-10 shadow-lg">
+                    <div class="text-center">
                         <h3 class="text-2xl font-bold mb-2">Join our mailing list</h3>
                         <p class="text-slate-400 mb-6">Sign up to receive updates about the event</p>
                         <form
@@ -200,10 +202,6 @@
                         </form>
                     </div>
                 </article>
-
-
-                <!-- until here -->
-
 
                 <article class="bg-slate-800 border-slate-700 border rounded-xl p-10 shadow-lg">
                     <div class="text-center">
