updated sponsorship deck link

--- a/public/index.html
+++ b/public/index.html
@@ -175,7 +175,7 @@
                         <h3 class="text-2xl font-bold mb-2">Interested in sponsoring the conference?</h3>
                         <p class="text-slate-400 mb-6">Promote your company to the world's top Ruby developers</p>
                         <a class="inline-block bg-red-700 text-white px-8 py-3 rounded-xl font-bold hover:bg-red-800 transition-all shadow-lg hover:shadow-xl border border-red-200/40 hover:border-red-200/60"
-                            href="https://rubyconfth.com/sponsors2023" target="_blank">View sponsorship deck</a>
+                            href="https://docs.google.com/presentation/d/1IizLq1X4xkwahNQprTdCRJp_RUzie7dpGvpe7qkjIxs/edit?usp=sharing" target="_blank">View sponsorship deck</a>
                     </div>
                 </article>
 
