--- a/public/index.html
+++ b/public/index.html
@@ -175,7 +175,8 @@
                         <h3 class="text-2xl font-bold mb-2">Interested in sponsoring the conference?</h3>
                         <p class="text-slate-400 mb-6">Promote your company to the world's top Ruby developers</p>
                         <a class="inline-block bg-red-700 text-white px-8 py-3 rounded-xl font-bold hover:bg-red-800 transition-all shadow-lg hover:shadow-xl border border-red-200/40 hover:border-red-200/60"
-                            href="https://docs.google.com/presentation/d/1IizLq1X4xkwahNQprTdCRJp_RUzie7dpGvpe7qkjIxs/edit?usp=sharing" target="_blank">View sponsorship deck</a>
+                            href="https://docs.google.com/presentation/d/1IizLq1X4xkwahNQprTdCRJp_RUzie7dpGvpe7qkjIxs/edit?usp=sharing"
+                            target="_blank">View sponsorship deck</a>
                     </div>
                 </article>
 
@@ -183,21 +184,22 @@
                 <article id="mailinglist" class="bg-slate-800 border-slate-700 border rounded-xl p-10 shadow-lg">
                     <div class="text-center">
                         <h3 class="text-2xl font-bold mb-2">Join our mailing list</h3>
-                        <p class="text-slate-400 mb-6">Sign up to receive updates about the event</p>
+                        <p class="text-slate-400 mb-6">Sign up to receive updates about RubyConf Thailand 2026</p>
                         <form
                             action="https://rubyconfth.us20.list-manage.com/subscribe/post?u=fd4a02525718b1d58ebaed6a0&id=4af9421776"
-                            method="post" class="form-mailing-list flex justify-center items-center gap-4"
+                            method="post"
+                            class="form-mailing-list flex flex-col md:flex-row justify-center items-center gap-4"
                             target="_blank">
-                            <div class="form__group w-1/3">
+                            <div class="form__group w-full md:w-1/3">
                                 <input type="hidden" name="tags" value="3502539">
                                 <input type="email" name="EMAIL" placeholder="Enter your email address"
-                                    class="form__control form__control--lg w-full bg-white text-slate-900 border-slate-600 placeholder-slate-500 focus:border-red-700 focus:ring-red-700 focus:ring-1 rounded-full h-12 text-center"
+                                    class="form__control form__control--lg w-full bg-white text-slate-900 border-slate-600 placeholder-slate-500 focus:border-red-700 focus:ring-red-700 focus:ring-1 rounded-full h-12 px-8"
                                     required />
                                 <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text"
                                         name="b_fd4a02525718b1d58ebaed6a0_4af9421776" tabindex="-1" value=""></div>
                             </div>
                             <button type="submit"
-                                class="inline-block bg-red-700 text-white px-8 py-3 rounded-xl font-bold hover:bg-red-800 transition-all shadow-lg hover:shadow-xl border border-red-200/40 hover:border-red-200/60">I
+                                class="w-full md:w-auto inline-block bg-red-700 text-white px-8 py-3 rounded-xl font-bold hover:bg-red-800 transition-all shadow-lg hover:shadow-xl border border-red-200/40 hover:border-red-200/60">I
                                 Love Ruby</button>
                         </form>
                     </div>
