replace workshops with keynotes

--- a/public/index.html
+++ b/public/index.html
@@ -81,10 +81,11 @@
                         <span class="text-slate-100 text-5xl md:text-6xl font-bold">2</span>
                         <span class="text-slate-400 text-sm block mt-2">days</span>
                     </li>
+
                     <li
                         class="bg-slate-800 border-slate-700 border rounded-2xl p-6 text-center shadow-lg hover:shadow-xl transition-all">
                         <span class="text-slate-100 text-5xl md:text-6xl font-bold">4</span>
-                        <span class="text-slate-400 text-sm block mt-2">workshops</span>
+                        <span class="text-slate-400 text-sm block mt-2">keynotes</span>
                     </li>
                     <li
                         class="bg-slate-800 border-slate-700 border rounded-2xl p-6 text-center shadow-lg hover:shadow-xl transition-all">
@@ -117,11 +118,12 @@
                                 </div>
                             </li>
                             <li class="md:pr-6 pt-6">
-                                <span class="text-3xl emoji block mb-4">🛠</span>
+                                <span class="text-3xl emoji block mb-4">🎯</span>
                                 <div>
-                                    <h3 class="font-bold text-xl">Hands-on Workshops</h3>
-                                    <p class="text-white/90 text-base font-mono">4 practical workshops where you'll
-                                        build real projects and level up your Ruby skills</p>
+                                    <h3 class="font-bold text-xl">4 Amazing Keynotes</h3>
+                                    <p class="text-white/90 text-base font-mono">Learn from industry leaders and Ruby
+                                        experts
+                                        who will share their insights and vision for the future</p>
                                 </div>
                             </li>
                             <li class="md:pl-6 pt-6">
