--- a/public/index.html
+++ b/public/index.html
@@ -4,33 +4,267 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Your site description">
     <title>RubyConf Thailand 2026</title>
-    <link rel="stylesheet" href="styles.css">
+    <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;600;700;800&family=Noto+Emoji:wght@700&display=swap"
+        rel="stylesheet">
+    <link href="./styles.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
+
 </head>
 
-<body>
-    <header>
-        <nav>
-            <img class="logo" src="./images/shared/logo/logo-text-icon.svg" alt="RubyConf Thailand 2026">
-        </nav>
-    </header>
+<body class="bg-slate-900 text-white text-lg">
+    <div class="max-w-[1440px] mx-auto px-8">
+        <header>
+            <nav class="py-8 flex justify-between items-center">
+                <img src="./images/2026/logo-white.svg" alt="RubyConf TH" class="h-8 drop-shadow">
+                <div class="hidden md:flex items-center gap-8">
+                    <!--
+                    <ul class="flex gap-8 uppercase">
+                        <li><a href="#" class="hover:text-red-600 transition-colors">Speakers</a></li>
+                        <li><a href="#" class="hover:text-red-600 transition-colors">Program</a></li>
+                        <li><a href="#" class="hover:text-red-600 transition-colors">Tickets</a></li>
+                        <li><a href="#" class="hover:text-red-600 transition-colors">Sponsors</a></li>
+                    </ul>
+                    -->
+                    <a href="#mailinglist"
+                        class="bg-red-700 text-white px-8 py-3 rounded-xl font-bold hover:bg-red-800 transition-all shadow-lg hover:shadow-xl border border-red-200/40 hover:border-red-200/60">
+                        I'm interested
+                    </a>
+                </div>
+            </nav>
+        </header>
 
-    <main>
-        <section>
-            We're working on something magical!
-        </section>
-    </main>
+        <main class="flex flex-col gap-8">
+            <section>
+                <article
+                    class="relative bg-red-600 rounded-xl p-8 md:p-16 shadow-xl overflow-hidden border border-red-200/20">
+                    <div class="absolute inset-0">
+                        <img src="./images/2026/cityscape.jpg" alt=""
+                            class="w-full h-full object-cover object-center opacity-50 mix-blend-multiply" />
+                    </div>
+                    <div class="relative z-10">
+                        <h2 class="text-2xl md:text-4xl font-bold">JAN 31-FEB 1, 2026</h2>
+                        <h1 class="text-4xl md:text-7xl font-extrabold mt-6">
+                            RUBYCONF<br>
+                            THAILAND<br>
+                            <span class="flex gap-4 items-center">
+                                <span>IS BACK</span>
+                                <span class="text-xl md:text-2xl ml-2  uppercase font-medium">Novotel Sukhumvit 20<br />
+                                    Bangkok, Thailand</span>
+                            </span>
+                        </h1>
+                        <!-- <a href="#"
+                            class="inline-block mt-8 bg-white text-red-600 px-8 py-3 rounded-xl font-bold hover:bg-gray-100 transition-colors">
+                            Buy Tickets
+                        </a> -->
+                    </div>
+                </article>
+            </section>
 
-    <footer>
-        <p>&copy; 2019-2025 <a href="https://bangkokrb.org">Bangkok.rb</a></p>
-        <div class="app-footer__link">
-            Past events:
-            <a href="/past/2023/">2023</a> -
-            <a href="/past/2022/">2022</a> -
-            <a href="/past/2019/">2019</a>
-        </div>
-    </footer>
+            <section>
+                <ul class="grid grid-cols-2 md:grid-cols-5 gap-6">
+                    <li
+                        class="bg-slate-800 border-slate-700 border rounded-xl p-6 text-center shadow-lg hover:shadow-xl transition-all">
+                        <span class="text-slate-100 text-5xl md:text-6xl font-bold">250+</span>
+                        <span class="text-slate-400 text-sm block mt-2">attendees</span>
+                    </li>
+                    <li
+                        class="bg-slate-800 border-slate-700 border rounded-2xl p-6 text-center shadow-lg hover:shadow-xl transition-all">
+                        <span class="text-slate-100 text-5xl md:text-6xl font-bold">16</span>
+                        <span class="text-slate-400 text-sm block mt-2">speakers</span>
+                    </li>
+                    <li
+                        class="bg-slate-800 border-slate-700 border rounded-2xl p-6 text-center shadow-lg hover:shadow-xl transition-all">
+                        <span class="text-slate-100 text-5xl md:text-6xl font-bold">2</span>
+                        <span class="text-slate-400 text-sm block mt-2">days</span>
+                    </li>
+
+                    <li
+                        class="bg-slate-800 border-slate-700 border rounded-2xl p-6 text-center shadow-lg hover:shadow-xl transition-all">
+                        <span class="text-slate-100 text-5xl md:text-6xl font-bold">4</span>
+                        <span class="text-slate-400 text-sm block mt-2">keynotes</span>
+                    </li>
+                    <li
+                        class="bg-slate-800 border-slate-700 border rounded-2xl p-6 text-center shadow-lg hover:shadow-xl transition-all">
+                        <span class="text-slate-100 text-5xl md:text-6xl font-bold">4th</span>
+                        <span class="text-slate-400 text-sm block mt-2">edition</span>
+                    </li>
+                </ul>
+            </section>
+
+            <section class="space-y-8">
+                <div class="grid md:grid-cols-2 gap-8">
+                    <article class="bg-red-600 rounded-xl p-10 shadow-xl border border-red-200/20">
+                        <h2 class="text-4xl font-bold mb-5">Why join?</h2>
+
+                        <ul class="grid md:grid-cols-2 gap-px">
+                            <li class="md:pr-6 pt-6 md:pt-0 first:pt-0">
+                                <span class="text-3xl emoji block mb-4">👀</span>
+                                <div>
+                                    <h3 class="font-bold text-xl">Learn from the Best</h3>
+                                    <p class="text-white/90 text-base font-mono">16 expert speakers sharing real-world
+                                        Ruby experiences, best practices, and cutting-edge techniques</p>
+                                </div>
+                            </li>
+                            <li class="md:pl-6 pt-6 md:pt-0">
+                                <span class="text-3xl emoji block mb-4">👥</span>
+                                <div>
+                                    <h3 class="font-bold text-xl">Network & Connect</h3>
+                                    <p class="text-white/90 text-base font-mono">Meet 250+ Ruby developers from across
+                                        Asia. Build relationships that last beyond the conference</p>
+                                </div>
+                            </li>
+                            <li class="md:pr-6 pt-6">
+                                <span class="text-3xl emoji block mb-4">🎯</span>
+                                <div>
+                                    <h3 class="font-bold text-xl">4 Amazing Keynotes</h3>
+                                    <p class="text-white/90 text-base font-mono">Learn from industry leaders and Ruby
+                                        experts
+                                        who will share their insights and vision for the future</p>
+                                </div>
+                            </li>
+                            <li class="md:pl-6 pt-6">
+                                <span class="text-3xl emoji block mb-4">🌆</span>
+                                <div>
+                                    <h3 class="font-bold text-xl">Experience Bangkok</h3>
+                                    <p class="text-white/90 text-base font-mono">Combine learning with exploring one of
+                                        Asia's most vibrant cities. Special social events included!</p>
+                                </div>
+                            </li>
+                        </ul>
+                    </article>
+
+                    <article class="bg-yellow-400 rounded-xl p-10 text-black shadow-xl">
+                        <h2 class="text-4xl font-bold mb-5">YOUR BOARDING PASS</h2>
+
+                        <dl class="grid grid-cols-2 gap-x-8 gap-y-6">
+                            <div>
+                                <dt class="text-sm uppercase text-gray-700 mb-1">Name</dt>
+                                <dd class="font-mono text-lg">Ruby Doe</dd>
+                            </div>
+                            <div>
+                                <dt class="text-sm uppercase text-gray-700 mb-1">Destination</dt>
+                                <dd class="font-mono text-lg">Bangkok, Thailand</dd>
+                            </div>
+                            <div>
+                                <dt class="text-sm uppercase text-gray-700 mb-1">Date</dt>
+                                <dd class="font-mono text-lg">JAN 31-FEB 1, 2026</dd>
+                            </div>
+                            <div>
+                                <dt class="text-sm uppercase text-gray-700 mb-1">Seat</dt>
+                                <dd class="font-mono text-lg">Front row</dd>
+                            </div>
+                            <div class="col-span-2">
+                                <dt class="text-sm uppercase text-gray-700 mb-1">Purpose of Visit</dt>
+                                <dd class="font-mono text-lg">
+                                    LEARN, CODE, CONNECT, EXPLORE
+                                </dd>
+                            </div>
+                            <div class="col-span-2 mt-6 pt-6 border-t border-yellow-500">
+                                <p class="font-mono text-sm text-gray-700">Please arrive at Novotel Sukhumvit 20 with
+                                    this boarding pass and a valid ID.</p>
+                            </div>
+                        </dl>
+                    </article>
+                </div>
+
+                <!-- Sponsorship Section -->
+                <article class="bg-slate-800 border-slate-700 border rounded-xl p-10 shadow-lg">
+                    <div class="text-center">
+                        <h3 class="text-2xl font-bold mb-2">Interested in sponsoring the conference?</h3>
+                        <p class="text-slate-400 mb-6">Promote your company to the world's top Ruby developers</p>
+                        <a class="inline-block bg-red-700 text-white px-8 py-3 rounded-xl font-bold hover:bg-red-800 transition-all shadow-lg hover:shadow-xl border border-red-200/40 hover:border-red-200/60"
+                            href="https://docs.google.com/presentation/d/1IizLq1X4xkwahNQprTdCRJp_RUzie7dpGvpe7qkjIxs/edit?usp=sharing"
+                            target="_blank">View sponsorship deck</a>
+                    </div>
+                </article>
+
+                <!-- Mailing List Section -->
+                <article id="mailinglist" class="bg-slate-800 border-slate-700 border rounded-xl p-10 shadow-lg">
+                    <div class="text-center">
+                        <h3 class="text-2xl font-bold mb-2">Join our mailing list</h3>
+                        <p class="text-slate-400 mb-6">Sign up to receive updates about RubyConf Thailand 2026</p>
+                        <form
+                            action="https://rubyconfth.us20.list-manage.com/subscribe/post?u=fd4a02525718b1d58ebaed6a0&id=4af9421776"
+                            method="post"
+                            class="form-mailing-list flex flex-col md:flex-row justify-center items-center gap-4"
+                            target="_blank">
+                            <div class="form__group w-full md:w-1/3">
+                                <input type="hidden" name="tags" value="3502539">
+                                <input type="email" name="EMAIL" placeholder="Enter your email address"
+                                    class="form__control form__control--lg w-full bg-white text-slate-900 border-slate-600 placeholder-slate-500 focus:border-red-700 focus:ring-red-700 focus:ring-1 rounded-full h-12 px-8"
+                                    required />
+                                <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text"
+                                        name="b_fd4a02525718b1d58ebaed6a0_4af9421776" tabindex="-1" value=""></div>
+                            </div>
+                            <button type="submit"
+                                class="w-full md:w-auto inline-block bg-red-700 text-white px-8 py-3 rounded-xl font-bold hover:bg-red-800 transition-all shadow-lg hover:shadow-xl border border-red-200/40 hover:border-red-200/60">I
+                                Love Ruby</button>
+                        </form>
+                    </div>
+                </article>
+
+                <article class="bg-slate-800 border-slate-700 border rounded-xl p-10 shadow-lg">
+                    <div class="text-center">
+                        <h3 class="text-2xl font-bold mb-6">Follow Us</h3>
+                        <ul class="flex justify-center gap-6">
+                            <li>
+                                <a href="https://twitter.com/rubyconfth" target="_blank"
+                                    class="text-red-400 hover:text-red-500 transition-colors">
+                                    <i class="fab fa-twitter text-4xl"></i>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="https://facebook.com/rubyconfth" target="_blank"
+                                    class="text-red-400 hover:text-red-500 transition-colors">
+                                    <i class="fab fa-facebook-f text-4xl"></i>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="https://instagram.com/rubyconfth" target="_blank"
+                                    class="text-red-400 hover:text-red-500 transition-colors">
+                                    <i class="fab fa-instagram text-4xl"></i>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="https://youtube.com/rubyconfth" target="_blank"
+                                    class="text-red-400 hover:text-red-500 transition-colors">
+                                    <i class="fab fa-youtube text-4xl"></i>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="https://github.com/rubyconfth" target="_blank"
+                                    class="text-red-400 hover:text-red-500 transition-colors">
+                                    <i class="fab fa-github text-4xl"></i>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </article>
+
+
+                <article class="bg-slate-800 border-slate-700 border rounded-xl p-10 text-center shadow-lg">
+                    <ul class="flex justify-center gap-8">
+                        <li class="text-5xl hover:scale-110 transition-transform">☺️</li>
+                        <li class="text-5xl hover:scale-110 transition-transform">☺️</li>
+                        <li class="text-5xl hover:scale-110 transition-transform">☺️</li>
+                        <li class="text-5xl hover:scale-110 transition-transform">☺️</li>
+                    </ul>
+                    <p class="text-white mt-6">The conference of smiles | Made with love by <a class="text-red-400"
+                            href="https://bangkokrb.org/">bangkok.rb</a></p>
+                    <p class="text-white mt-6">Past events:
+                        <a class="text-red-400" href="./past/2019/">2019</a>,
+                        <a class="text-red-400" href="./past/2022/">2022</a>,
+                        <a class="text-red-400" href="./past/2023/">2023</a>
+                    </p>
+
+                </article>
+            </section>
+        </main>
+    </div>
 </body>
 
 </html>
